RESOLVED FIXED195779
REGRESSION: Layout Test http/tests/security/cross-origin-indexeddb.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=195779
Summary REGRESSION: Layout Test http/tests/security/cross-origin-indexeddb.html is cr...
Truitt Savell
Reported 2019-03-14 16:13:01 PDT
The following layout test is crashing on iOS and Mac Debug WK2 http/tests/security/cross-origin-indexeddb.html Probable cause: This test recently began crashing around r242911. It is fairly consistent failure and crashes around 90% of the time on the bots. I am unable to reproduce locally right now. Flakiness Dashboard: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Fsecurity%2Fcross-origin-indexeddb.html Crash: https://build.webkit.org/results/Apple%20Mojave%20Debug%20WK2%20(Tests)/r242946%20(1942)/http/tests/security/cross-origin-indexeddb-crash-log.txt VM Regions Near 0xbbadbeef: --> __TEXT 0000000104c3c000-0000000104c3d000 [ 4K] r-x/rwx SM=COW /Volumes/VOLUME/*/*.Development Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x000000011dc8ff40 WTFCrash + 16 (Assertions.cpp:305) 1 com.apple.WebCore 0x000000010b8e154b WTFCrashWithInfo(int, char const*, char const*, int) + 27 2 com.apple.WebCore 0x000000010d178aaa WTF::CrossThreadQueue<WTF::CrossThreadTask>::append(WTF::CrossThreadTask&&) + 138 (CrossThreadQueue.h:64)
Attachments
Patch (1.98 KB, patch)
2019-03-14 17:07 PDT, youenn fablet
no flags
Patch (2.44 KB, patch)
2019-03-14 17:13 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-03-14 17:07:22 PDT
youenn fablet
Comment 2 2019-03-14 17:12:24 PDT
Tried to reproduce locally as well but failed. The current model is that we only potentially delay tasks that might increase quota. Read operations or delete operations can carry on without waiting for the space request. Patch should fix the crash. I wonder whether the IDB implementation would behave better with waiting for the space request to complete to carry on with other tasks, be they read, write or delete.
youenn fablet
Comment 3 2019-03-14 17:13:27 PDT
Chris Dumez
Comment 4 2019-03-19 11:28:20 PDT
Comment on attachment 364724 [details] Patch r=me
WebKit Commit Bot
Comment 5 2019-03-19 11:55:03 PDT
Comment on attachment 364724 [details] Patch Clearing flags on attachment: 364724 Committed r243157: <https://trac.webkit.org/changeset/243157>
WebKit Commit Bot
Comment 6 2019-03-19 11:55:05 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2019-03-19 11:56:18 PDT
Note You need to log in before you can comment on or make changes to this bug.