REGRESSION: Layout Test http/tests/security/cross-origin-indexeddb.html is crashing https://bugs.webkit.org/show_bug.cgi?id=195779

Reviewed by Chris Dumez.

When requesting space, we might delay execution of the task.
In such a case, a task to close the database might be done before the task continues.
Check that the database is not closing to continue the task.
This should ensure that the cross thread queue is not already killed.

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::requestSpace):


Canonical link: https://commits.webkit.org/210226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243157 268f45cc-cd09-0410-ab3c-d52691b4dbfc